--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "hello",
+  "name": "static-web-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.0",
+    "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.00.0",
+    "react-dom": "^17.00.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
